# sun-sets-gtk-theme

./: Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
src/: cli.rs  color_scheme.rs  gsettings.rs  heliocron_config.rs  location.rs  main.rs  theme.rs  time.rs
systemd/: README.md  install.sh  readme.md  sun-sets-gtk-theme.service
systemd/user/: install.sh  remove.sh  service  systemd.service
