[package]
name = "sun-sets-gtk-theme"
description = "Set GTK Theme based on the sun position"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/sun-sets-gtk-theme"
authors = ["EdJoPaTo <sun-sets-gtk-theme-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"

[dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
chrono = "0.4"
dirs-next = "2"
heliocron = "0.5"
toml = "0.5"
serde = {version = "1", features = ["derive"]}
